fixing spacings

--- a/app/src/stylesheets/_variables.scss
+++ b/app/src/stylesheets/_variables.scss
@@ -1,3 +1,7 @@
+/*$text-title-height: 12pt;*/
+$text-content-height: 12px;
+/*$text-smaller-height: 12pt;*/
+
 $green: #00965e;
 $green-link: #085f40;
 $grey-button: #ebebec;
